# Thrust-test

./: CMakeLists.txt  README.md
new/: CMakeLists.txt  fill_and_copy.cu  reduce.cu  reduce_gpu_cpu.cu  scatter_and_gather.cu  sort.cu  transform_reduce.cu  transformations.cu
old/: CMakeLists.txt  fill_and_copy.cu  reduce.cu  scatter_and_gather.cu  sort.cu  transform_reduce.cu  transformations.cu
